@@ -40,64 +40,50 @@ class Plugin(movie.Movie):
         self.movie_id = id
         self.url = 'http://www.zweitausendeins.de/filmlexikon/?sucheNach=titel&wert=' + str(self.movie_id)
 
-    def initialize(self):
-        url = 'http://www.zweitausendeins.de/getimage/?imageNo=0&movieNo=' + str(self.movie_id)
-        self.imagelinks = self.open_page(self.parent_window, url=url)
-
     def get_image(self):
-        if string.find(self.imagelinks, '|') > 0:
-            self.image_url = gutils.before(self.imagelinks, '|')
+        self.image_url = ''
+        url = url = gutils.trim(gutils.trim(self.page, 'class="film-image"', '>'), 'http://', ')')
+        if url:
+            self.image_url = 'http://' + url
 
     def get_o_title(self):
-        self.o_title = gutils.clean(gutils.after(
-            gutils.regextrim(self.page, 'class="text_ergebniss_faz_3"', '[ \t]+[(]Originaltitel[)]'), '</a>'))
-        p1 = string.rfind(self.o_title, ',')
-        if p1 > 0:
-            self.o_title = self.o_title[p1 + 1:]
-        self.o_title = string.capwords(self.o_title)
-        if self.o_title == '':
-            self.o_title = gutils.after(gutils.trim(self.page, 'class="text_ergebniss_faz_3"', '</a>'), '>')
+        self.o_title = string.capwords(gutils.clean(gutils.regextrim(self.page, '<b>Originaltitel:', '(</p>|<b>)')))
+        if not self.o_title:
+            self.o_title = gutils.after(gutils.trim(self.page, 'class=\'film-titel\'', '</h1>'), '>')
 
     def get_title(self):
-        self.title = gutils.after(gutils.trim(self.page, 'class="text_ergebniss_faz_3"', '</a>'), '>')
+        self.title = gutils.after(gutils.trim(self.page, 'class=\'film-titel\'', '</h1>'), '>')
 
     def get_director(self):
-        self.director = gutils.after(gutils.trim(self.page, '(Regie)', '</span>'), '>')
-        self.director = re.sub(',[ ]*$', '', self.director)
+        self.director = gutils.trim(self.page, '<b>Regie:', '</p>')
 
     def get_plot(self):
-        self.plot = gutils.after(gutils.trim(self.page, 'Inhalt des Films:', '</td>'), '</div>')
+        self.plot = gutils.after(gutils.trim(self.page, 'class=\'film-text\'', '</p>'), '>')
 
     def get_year(self):
-        self.year = gutils.after(gutils.trim(self.page, 'sucheNach=produktionsjahr', '</a>'), '>')
+        self.year = gutils.after(gutils.trim(self.page, '<b>Produktionsjahr:', '<br/>'), '>')
 
     def get_runtime(self):
-        self.runtime = gutils.trim(self.page, 'L&auml;nge: ', ' Minuten')
+        self.runtime = gutils.trim(self.page, '<b>Länge:', '<br/>')
 
     def get_genre(self):
-        elements = string.split(self.page, 'sucheNach=genre')
-        if (elements[0]<>''):
-            elements[0] = ''
-            self.delimiter = ''
+        self.genre = gutils.after(gutils.trim(self.page, 'class=\'film-angaben\'', '</p>'), '>')
+        if ':' in self.genre:
             self.genre = ''
-            for element in elements:
-                if (element <> ''):
-                    self.genre += self.delimiter + gutils.trim(element, '>', '</a>')
-                    self.delimiter = ", "
 
     def get_cast(self):
-        self.cast = gutils.regextrim(self.page, '[(]Darsteller[)]', '(</td>|<br><span[^>]+>)')
+        self.cast = gutils.trim(self.page, '<b>Darsteller:', '</p>')
         self.cast = gutils.clean(self.cast)
-        self.cast = self.cast.replace(' als ', _(' as '))
-        self.cast = re.sub('( \t|\t|\r|\n)', '', self.cast)
-        self.cast = self.cast.replace(',', '\n')
+        self.cast = self.cast.replace(' (', _(' as '))
+        self.cast = self.cast.replace('), ', '\n')
+        self.cast = self.cast.replace(')', '')
 
     def get_classification(self):
-        self.classification = gutils.regextrim(self.page, 'FSK:[ ]+', '[,;]')
+        self.classification = gutils.regextrim(self.page, '<b>FSK:[ ]*', '(<br/>|[,;])')
 
     def get_studio(self):
-        self.studio = gutils.after(gutils.trim(self.page, 'sucheNach=produktionsfirma', '</span>'), '>')
-        self.studio = string.replace(self.studio, '/', ',')
+        self.studio = gutils.after(gutils.trim(self.page, '<b>Produktionsfirma:', '<br/>'), '>')
+        self.studio = string.replace(self.studio, '/', ', ')
         self.studio = re.sub(',[ ]*$', '', self.studio)
 
     def get_o_site(self):
@@ -110,19 +96,19 @@ class Plugin(movie.Movie):
         self.trailer = ''
 
     def get_country(self):
-        self.country = gutils.after(gutils.trim(self.page, 'sucheNach=produktionsland', '</span>'), '>')
+        self.country = gutils.after(gutils.trim(self.page, '<b>Produktionsland:', '<br/>'), '>')
         self.country = re.sub(',[ ]*$', '', self.country)
-        self.country = string.replace(self.country, '/', ',')
+        self.country = string.replace(self.country, '/', ', ')
 
     def get_rating(self):
         self.rating = 0
 
     def get_screenplay(self):
-        self.screenplay = gutils.trim(self.page, '(Drehbuch)', '</span>')
+        self.screenplay = gutils.trim(self.page, '<b>Drehbuch:', '</p>')
         self.screenplay = re.sub(',[ ]*$', '', self.screenplay)
 
     def get_cameraman(self):
-        self.cameraman = gutils.trim(self.page, '(Kamera)', '</span>')
+        self.cameraman = gutils.trim(self.page, '<b>Kamera:', '</p>')
         self.cameraman = re.sub(',[ ]*$', '', self.cameraman)
 
 class SearchPlugin(movie.SearchMovie):
@@ -192,13 +178,13 @@ class PluginTest:
             'o_title'           : 'Rocky Balboa',
             'director'          : 'Sylvester Stallone',
             'plot'              : True,
-            'cast'              : 'A.J. Benza' + _(' as ') + 'L.C.\n\
-Milo Ventimiglia' + _(' as ') + 'Rocky jr.\n\
+            'cast'              : 'Sylvester Stallone' + _(' as ') + 'Rocky Balboa\n\
+Burt Young' + _(' as ') + 'Paulie\n\
 Antonio Tarver' + _(' as ') + 'Mason \'The Line\' Dixon\n\
 Geraldine Hughes' + _(' as ') + 'Marie\n\
-Sylvester Stallone' + _(' as ') + 'Rocky Balboa\n\
-Burt Young' + _(' as ') + 'Paulie\n\
-Tony Burton' + _(' as ') + 'Duke',
+Milo Ventimiglia' + _(' as ') + 'Rocky jr.\n\
+Tony Burton' + _(' as ') + 'Duke\n\
+A.J. Benza' + _(' as ') + 'L.C.',
             'country'           : 'USA',
             'genre'             : 'Boxerfilm',
             'classification'    : 'ab 12',
@@ -212,25 +198,25 @@ Tony Burton' + _(' as ') + 'Duke',
             'image'             : True,
             'rating'            : False,
             'screenplay'        : 'Sylvester Stallone',
-            'cameraman'         : 'J. Clark Mathis',
+            'cameraman'         : 'Clark Mathis',
         },
         '26956' : { 
             'title'             : 'Bürgschaft für ein Jahr',
             'o_title'           : 'Bürgschaft für ein Jahr',
             'director'          : 'Herrmann Zschoche',
             'plot'              : True,
-            'cast'              : 'Heide Kipp' + _(' as ') + 'Frau Braun\n\
-Jan Spitzer' + _(' as ') + 'Werner Horn\n\
+            'cast'              : 'Katrin Saß' + _(' as ') + 'Nina\n\
 Monika Lennartz' + _(' as ') + 'Irmgard Behrend\n\
-Katrin Saß' + _(' as ') + 'Nina\n\
-Ursula Werner' + _(' as ') + 'Frau Müller\n\
-Christian Steyer' + _(' as ') + 'Heiner Menk\n\
 Jaecki Schwarz' + _(' as ') + 'Peter Müller\n\
-Barbara Dittus' + _(' as ') + 'Heimleiterin',
+Christian Steyer' + _(' as ') + 'Heiner Menk\n\
+Jan Spitzer' + _(' as ') + 'Werner Horn\n\
+Heide Kipp' + _(' as ') + 'Frau Braun\n\
+Barbara Dittus' + _(' as ') + 'Heimleiterin\n\
+Ursula Werner' + _(' as ') + 'Frau Müller',
             'country'           : 'DDR',
             'genre'             : 'Arbeiterfilm, Frauenfilm, Literaturverfilmung',
             'classification'    : 'ab 6',
-            'studio'            : 'DEFA, Gruppe "Berlin"',
+            'studio'            : 'DEFA, Gruppe Berlin""',
             'o_site'            : False,
             'site'              : 'http://www.zweitausendeins.de/filmlexikon/?sucheNach=titel&wert=26956',
             'trailer'           : False,
@@ -249,9 +235,9 @@ Barbara Dittus' + _(' as ') + 'Heimleiterin',
             'plot'              : True,
             'cast'              : 'Ryu Seung-beom' + _(' as ') + 'Sang-hwan\n\
 Yoon So-yi' + _(' as ') + 'Wi-jin\n\
-Yun Ju-sang' + _(' as ') + 'Mu-woon\n\
 Ahn Sung-kee' + _(' as ') + 'Ja-woon\n\
-Jung Doo-hong' + _(' as ') + 'Heukwoon',
+Jung Doo-hong' + _(' as ') + 'Heukwoon\n\
+Yun Ju-sang' + _(' as ') + 'Mu-woon',
             'country'           : 'Südkorea',
             'genre'             : False,
             'classification'    : 'ab 16',
@@ -264,7 +250,7 @@ Jung Doo-hong' + _(' as ') + 'Heukwoon',
             'runtime'           : 108,
             'image'             : False,
             'rating'            : False,
-            'screenplay'        : 'Ryoo Seung-wan',
+            'screenplay'        : 'Eun Ji-hie, Ryoo Seung-wan, Yu Seon-dong',
             'cameraman'         : 'Lee Jun-gyu',
         }
     }
