@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2013  Vasco Nunes, Piotr Ożarowski
 
 
+2013-01-30  Michael Jahn
+	* FilmeVonAZ movie plugin updated
+
 2013-01-28  Michael Jahn
 	* Kino.de and Cineteka movie plugin updated
 
